02-系统持续自动化架构设计(2020)/sjzy-packet-dotnet.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  #creationTimestamp: "2022-08-02T07:07:37Z"
  generation: 1
  labels:
    app: sjzy-package-api
  name: sjzy-package-api
  namespace: sjzy
  #  uid: 789aa440-b439-4ec5-aef7-943ad8d7e0e5
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sjzy-package-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sjzy-package-api
    spec:
      containers:
      - image: harbor:8080/back/sjzy.package.api
        imagePullPolicy: Always
        name: sjzy-package-api
        ports:
        - containerPort: 8086
          protocol: TCP
        resources:
          limits:
            cpu: 1000m
            memory: 640Mi
          requests:
            cpu: 500m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  #creationTimestamp: "2022-08-02T07:07:37Z"
  generation: 1
  labels:
    app: sjzy-package-task-api
  name: sjzy-package-task-api
  namespace: sjzy
  #  uid: 789aa440-b439-4ec5-aef7-943ad8d7e0e5
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sjzy-package-task-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sjzy-package-task-api
    spec:
      containers:
      - image: harbor:8080/back/sjzy.package.task.api
        imagePullPolicy: Always
        name: sjzy-package-task-api
        ports:
        - containerPort: 7076
          protocol: TCP
        resources:
          limits:
            cpu: 1000m
            memory: 256Mi
          requests:
            cpu: 500m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  #creationTimestamp: "2022-08-02T07:07:37Z"
  generation: 1
  labels:
    app: sjzy-package-output-api
  name: sjzy-package-output-api
  namespace: sjzy
  #  uid: 789aa440-b439-4ec5-aef7-943ad8d7e0e5
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sjzy-package-output-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sjzy-package-output-api
    spec:
      containers:
      - image: harbor:8080/back/sjzy.package.output.api
        imagePullPolicy: Always
        name: sjzy-package-output-api
        ports:
        - containerPort: 8087
          protocol: TCP
        resources:
          limits:
            cpu: 1000m
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}

---
apiVersion: v1
kind: Service
metadata:
  #creationTimestamp: "2022-08-02T07:08:51Z"
  labels:
    app: sjzy-package-api
  name: sjzy-package-api
  namespace: sjzy
  #   uid: 326ff427-0907-4ef3-9e77-73c64d23582a
spec:
  ports:
  - name: 8086-8086
    port: 8086
    protocol: TCP
    targetPort: 8086
  selector:
    app: sjzy-package-api
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  #creationTimestamp: "2022-08-02T07:08:51Z"
  labels:
    app: sjzy-package-task-api
  name: sjzy-package-task-api
  namespace: sjzy
  #   uid: 326ff427-0907-4ef3-9e77-73c64d23582a
spec:
  ports:
  - name: 7076-7076
    port: 7076
    protocol: TCP
    targetPort: 7076
  selector:
    app: sjzy-package-task-api
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  #creationTimestamp: "2022-08-02T07:08:51Z"
  labels:
    app: sjzy-package-output-api
  name: sjzy-package-output-api
  namespace: sjzy
  #   uid: 326ff427-0907-4ef3-9e77-73c64d23582a
spec:
  ports:
  - name: 8087-8087
    port: 8087
    protocol: TCP
    targetPort: 8087
  selector:
    app: sjzy-package-output-api
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
