02-系统持续自动化架构设计(2020)/sjzy-packet-front.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  #creationTimestamp: "2022-08-02T07:07:37Z"
  generation: 1
  labels:
    app: packet-bsi-pc-ui
  name: packet-bsi-pc-ui
  namespace: sjzy
  #  uid: 789aa440-b439-4ec5-aef7-943ad8d7e0e5
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: packet-bsi-pc-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: packet-bsi-pc-ui
    spec:
      containers:
      - image: harbor:8080/front/packet_bsi_pc_ui
        imagePullPolicy: Always
        name: packet-bsi-pc-ui
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 384Mi
          requests:
            cpu: 500m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  #creationTimestamp: "2022-08-02T07:07:37Z"
  generation: 1
  labels:
    app: packet-shopman-web-ui
  name: packet-shopman-web-ui
  namespace: sjzy
  #  uid: 789aa440-b439-4ec5-aef7-943ad8d7e0e5
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: packet-shopman-web-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: packet-shopman-web-ui
    spec:
      containers:
      - image: harbor:8080/front/packet_shopman_web_ui
        imagePullPolicy: Always
        name: packet-shopman-web-ui
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 384Mi
          requests:
            cpu: 500m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  #creationTimestamp: "2022-08-02T07:07:37Z"
  generation: 1
  labels:
    app: packet-outcustome-pc-ui
  name: packet-outcustome-pc-ui
  namespace: sjzy
  #  uid: 789aa440-b439-4ec5-aef7-943ad8d7e0e5
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: packet-outcustome-pc-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: packet-outcustome-pc-ui
    spec:
      containers:
      - image: harbor:8080/front/packet_outcustome_pc_ui
        imagePullPolicy: Always
        name: packet-outcustome-pc-ui
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 384Mi
          requests:
            cpu: 500m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  #creationTimestamp: "2022-08-02T07:07:37Z"
  generation: 1
  labels:
    app: packet-label
  name: packet-label
  namespace: sjzy
  #  uid: 789aa440-b439-4ec5-aef7-943ad8d7e0e5
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: packet-label
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: packet-label
    spec:
      containers:
      - image: harbor:8080/front/packet_label
        imagePullPolicy: Always
        name: packet-label
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 384Mi
          requests:
            cpu: 500m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}



---
apiVersion: v1
kind: Service
metadata:
  #creationTimestamp: "2022-08-02T07:08:51Z"
  labels:
    app: packet-bsi-pc-ui
  name: packet-bsi-pc-ui
  namespace: sjzy
  #   uid: 326ff427-0907-4ef3-9e77-73c64d23582a
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: packet-bsi-pc-ui
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  #creationTimestamp: "2022-08-02T07:08:51Z"
  labels:
    app: packet-shopman-web-ui
  name: packet-shopman-web-ui
  namespace: sjzy
  #   uid: 326ff427-0907-4ef3-9e77-73c64d23582a
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: packet-shopman-web-ui
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  #creationTimestamp: "2022-08-02T07:08:51Z"
  labels:
    app: packet-outcustome-pc-ui
  name: packet-outcustome-pc-ui
  namespace: sjzy
  #   uid: 326ff427-0907-4ef3-9e77-73c64d23582a
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: packet-outcustome-pc-ui
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  #creationTimestamp: "2022-08-02T07:08:51Z"
  labels:
    app: packet-label
  name: packet-label
  namespace: sjzy
  #   uid: 326ff427-0907-4ef3-9e77-73c64d23582a
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: packet-label
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
